--- a/index.html
+++ b/index.html
@@ -40,6 +40,32 @@
         <h1 class="pageHeader" style="margin-bottom: 0; padding: 0;">Crafting</h1>
         <h2 style="margin-bottom: 2px;">Production</h2>
         <div class="productionList" id="productionList">
+            <div>
+                <div>
+                    <img src="./img//button/production_empty.svg" alt="">
+                    <p>Test</p>
+                </div>
+                <progress></progress>
+            </div>
+            <div>
+                <div>
+                    <img src="./img//button/production_empty.svg" alt="">
+                    <p>Test</p>
+                </div>
+                <progress></progress>
+            </div>
+            <!--
+            
+                
+            <div id=production{i+1}>
+                <div id=production{i+1}Button>
+                    <img src="./img//button/production_empty.svg" alt="" id="production{i+1}Image">
+                    <p id="production{i+1}Text">Test</p>
+                </div>
+                <progress id="production{i+1}Progress"></progress>
+            </div>
+
+            -->
         </div>
         <br><br>
         <div class="craftingBondPreviewContainer">
