create overview page

--- a/index.html
+++ b/index.html
@@ -36,10 +36,25 @@
             <div id="settingsPageButton">
                 <p>Settings</p>
             </div>
+            <div id="reset">
+                <p>reset</p>
+            </div>
         </div>
         <br>
         <div class="homePage page" id="homePage">
             <h1 class="pageHeader">Overview</h1>
+            <div class="homePageStuff">
+                <div class="homePageProductionPreview homePagePreviewItem">
+                    <h2>Production</h2>
+                    <div id="productionItemPreviews">
+                    </div>
+                </div>
+                <div class="homePageInventoryPreview homePagePreviewItem">
+                    <h2>Inventory</h2>
+                    <div id="inventoryItemPreviews"></div>
+                </div>
+                <div class="break"></div>
+            </div>
         </div>
         <div class="craftingPage page" id="craftingPage">
             <h1 class="pageHeader" style="margin-bottom: 0; padding: 0;">Crafting</h1>
