--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+
+    <link rel="stylesheet" href="./stylesheets/global.css">
+
+    <link rel="stylesheet" href="./stylesheets/home.css">
+    <link rel="stylesheet" href="./stylesheets/crafting.css">
+    <link rel="stylesheet" href="./stylesheets/inventory.css">
+    <link rel="stylesheet" href="./stylesheets/settings.css">
+    <link rel="stylesheet" href="./stylesheets/upgrades.css">
+
     <link rel="shortcut icon" href="./img/favicon/favicon.ico" type="image/x-icon">
     <script type="module" src="./index.js"></script>
     <title>Idle Chemist</title>
@@ -35,6 +43,9 @@
             </div>
             <div id="settingsPageButton">
                 <p>Settings</p>
+            </div>
+            <div id="upgradesPageButton">
+                <p>Upgrades</p>
             </div>
             <div id="reset">
                 <p>reset</p>
@@ -330,6 +341,13 @@
                         <input type="text" name="" id="importSaveFromTextInput"><button id="importSaveFromTextButton">import</button>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="upgradesPage page" id="upgradesPage">
+            <h1 class="pageHeader">Upgrades</h1>
+            <h2>Unlockables</h2>
+            <div id="unlockProductionSlotButton">
+                <p>Unlock Production Slot<span id="productionUnlockedCount">null/null</span></p>
             </div>
         </div>
     </div>
