--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             <div id="aboutPageButton">
                 <p>About</p>
             </div>
+            <div id="reset">
+                <p>reset</p>
+            </div>
         </div>
         <br>
         <div class="homePage page" id="homePage">
